Estado - Refatoracao do codigo